--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,7 @@ mongoengine
 authlib
 python-jose[cryptography]
 python-multipart
+cloudinary
+langchain-google-genai
+langchain-core
+langchain-community
